--- a/env.example
+++ b/env.example
@@ -10,7 +10,7 @@ WORDPRESS_DIR=./core/wordpress
 WORDPRESS_THEME_DIR=
 WORDPRESS_IMPORT_FILE=
 WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_HOST=mysql
+WORDPRESS_DB_HOST=mariadb
 WORDPRESS_DB_USER=root
 WORDPRESS_DB_PASSWORD=password
 WORDPRESS_TABLE_PREFIX=wp_
